--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,51 @@
 .App {
+  background-color: #ffffff;
+  height: 100vh;
+  width:100%;
   text-align: center;
+}
+
+.title {
+  font-size: 7rem;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+.front{
+  display: block;
+   width: 100%;
+  height: 70vh; 
+  object-fit: cover;
+  margin: 0 auto 1.5rem auto;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+.picBy{
+  font-size: 1.8rem;
+  color: #555;
+  margin-left: 8rem;
+}
+
+.aboutTitle {
+  font-size: 4rem;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+
+.about {
+  font-size: 5rem;
+  text-align: center;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+.footer{
+  font-size: 2rem;
+  text-align: center;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
 }
 
 .App-logo {
